{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 126,
  "lineage": "2246738d-9e70-2175-4363-39e40c27cc78",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:internet-gateway/igw-0dce701f09fb9aaac",
            "id": "igw-0dce701f09fb9aaac",
            "owner_id": "942466511124",
            "region": "us-east-2",
            "tags": {
              "Name": "Dagster-Cloud-robzvo-Agent"
            },
            "tags_all": {
              "Name": "Dagster-Cloud-robzvo-Agent"
            },
            "vpc_id": "vpc-066abc7793d04e9d3"
          },
          "dependencies": [
            "aws_vpc.agent"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "to_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0dce701f09fb9aaac",
            "id": "r-rtb-01843cf01563635961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-2",
            "route_table_id": "rtb-01843cf0156363596",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.agent",
            "aws_route_table.public",
            "aws_vpc.agent"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:route-table/rtb-01843cf0156363596",
            "id": "rtb-01843cf0156363596",
            "owner_id": "942466511124",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dce701f09fb9aaac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "timeouts": null,
            "vpc_id": "vpc-066abc7793d04e9d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.agent"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019fa2611d25f2f11",
            "region": "us-east-2",
            "route_table_id": "rtb-01843cf0156363596",
            "subnet_id": "subnet-0296ed52a0fc4a5f4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.agent",
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce9880d76aaee003",
            "region": "us-east-2",
            "route_table_id": "rtb-01843cf0156363596",
            "subnet_id": "subnet-0e7a6a36221aa8837"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.agent",
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc95474d6bb21512",
            "region": "us-east-2",
            "route_table_id": "rtb-01843cf0156363596",
            "subnet_id": "subnet-075388949d7d6aa3e"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.agent",
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:subnet/subnet-0296ed52a0fc4a5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296ed52a0fc4a5f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942466511124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2a"
            },
            "tags_all": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2a"
            },
            "vpc_id": "vpc-066abc7793d04e9d3"
          },
          "dependencies": [
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:subnet/subnet-0e7a6a36221aa8837",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7a6a36221aa8837",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942466511124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2b"
            },
            "tags_all": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2b"
            },
            "vpc_id": "vpc-066abc7793d04e9d3"
          },
          "dependencies": [
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:subnet/subnet-075388949d7d6aa3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075388949d7d6aa3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942466511124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2c"
            },
            "tags_all": {
              "Name": "Dagster-Cloud-robzvo-Agent-us-east-2c"
            },
            "vpc_id": "vpc-066abc7793d04e9d3"
          },
          "dependencies": [
            "aws_vpc.agent",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:942466511124:vpc/vpc-066abc7793d04e9d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-071a4e320bc184885",
            "default_route_table_id": "rtb-00d278aa83133e2fa",
            "default_security_group_id": "sg-0ce6008af146680e5",
            "dhcp_options_id": "dopt-0e4acd06b8c544e4a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-066abc7793d04e9d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d278aa83133e2fa",
            "owner_id": "942466511124",
            "region": "us-east-2",
            "tags": {
              "Name": "Dagster-Cloud-robzvo-Agent"
            },
            "tags_all": {
              "Name": "Dagster-Cloud-robzvo-Agent"
            }
          }
        }
      ]
    }
  ]
}